# component-model

./: .buildinfo  .coveragerc  .gitignore  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE.html  PythonFMU_notes.html  README.html  README.rst  STYLEGUIDE.html  STYLEGUIDE.md  api.html  component-development-process.html  component_model.html  genindex.html  index.html  names.csv  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  qa.bat  requirements.txt  ruff.toml  search.html  searchindex.js  tox.ini
.github/workflows/: _build_and_publish_documentation.yml  _build_package.yml  _code_quality.yml  _merge_into_release.yml  _publish_package.yml  _publish_package_test.yml  _test.yml  _test_future.yml  publish_release.yml  pull_request_to_main.yml  push.yml  push_to_main.yml  push_to_master.yml
_autosummary/: component_model.analytic.ForcedOscillator1D.html  component_model.analytic.html  component_model.enums.Check.html  component_model.enums.html  component_model.model.Model.html  component_model.model.html  component_model.range.Range.html  component_model.range.html  component_model.unit.Unit.html  component_model.unit.html  component_model.utils.analysis.html  component_model.utils.controls.Control.html  component_model.utils.controls.Controls.html  component_model.utils.controls.RW.html  component_model.utils.controls.html  component_model.utils.fmu.html  component_model.utils.html  component_model.utils.logger.MsgCounterHandler.html  component_model.utils.logger.html  component_model.utils.osp.html  component_model.utils.transform.html  component_model.utils.xml.html  component_model.variable.Check.html  component_model.variable.Variable.html  component_model.variable.html  component_model.variable_naming.ParsedVariable.html  component_model.variable_naming.VariableNamingConvention.html  component_model.variable_naming.html
_sources/: PythonFMU_notes.rst.txt  component-development-process.rst.txt
_sources/_autosummary/: component_model.analytic.rst.txt  component_model.enums.Check.rst.txt  component_model.model.Model.rst.txt  component_model.range.Range.rst.txt  component_model.range.rst.txt  component_model.utils.analysis.rst.txt  component_model.utils.controls.Control.rst.txt  component_model.utils.controls.Controls.rst.txt  component_model.utils.controls.rst.txt  component_model.utils.logger.MsgCounterHandler.rst.txt  component_model.utils.logging.rst.txt  component_model.utils.osp.rst.txt  component_model.utils.rst.txt  component_model.utils.transform.rst.txt  component_model.utils.xml.rst.txt  component_model.variable.Variable.rst.txt  component_model.variable.rst.txt  component_model.variable_naming.VariableNamingConvention.rst.txt
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  PythonFMU_notes.html  README.html  STYLEGUIDE.html  api.html  component-development-process.html  component_model.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
branch/main/_autosummary/: component_model.analytic.ForcedOscillator1D.html  component_model.analytic.html  component_model.enums.Check.html  component_model.enums.html  component_model.model.Model.html  component_model.model.html  (+24 more)
component_model/: MobileCrane.fmu  OspSystemStructure.xml  Plotter.py  __init__.py  caus_var_ini.py  component_FMUs.py  component_fmus.py  craneFMU_v0.py  logger.py  model.py  plotter.py  utils.py  variable.py  wrapFMU.py
component_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
component_model/example_models/: __init__.py  bouncing_ball.py  bouncing_ball2.py  bouncing_ball_3d.py  input_table.py
doc/_ext/: assumption.py  get_from_code.py  spec.py  specification.py
doc/source/: conf.py  modules.rst
docs/_ext/: assumption.py  get_from_code.py  spec.py  specification.py
docs/source/: PythonFMU_notes.rst  README.md  component-development-process.rst  component-model.pptx  component_model.rst  conf.py  index.rst  readme.rst
examples/: BouncingBallStructure.xml  DrivingForce.fmu  DrivingForce6D.fmu  ForcedOscillator.xml  ForcedOscillator6D.xml  HarmonicOscillator.fmu  HarmonicOscillator6D.fmu  TimeTableStructure.xml  axle.py  axle_fmu.py  bouncing_ball_3d.py  bouncing_ball_3d_pythonfmu.py  driving_force_fmu.py  input_table.py  new_pythonfmu_features.py  new_pythonfmu_features2.py  new_pythonfmu_features3.py  new_pythonfmu_features4.py  oscillator.py  oscillator_6d.py  oscillator_6dof_fmu.py  oscillator_fmu.py  oscillator_xd.py  simple_table.py  time_table.py  time_table_fmu.py
fmus/: PythonSlave.fmu
src/component_model/: __init__.py  analytic.py  caus_var_ini.py  enums.py  model.py  plotter.py  range.py  unit.py  variable.py  variable_naming.py
tests/: BouncingBall.fmu  BouncingBallFMU.fmu  SimpleTable.fmu  conftest.py  simple_table_FMU.py  test_BouncingBall.py  test_BouncingBallFMU.py  test_analysis.py  test_analytic.py  test_axle_fmu.py  test_basic.py  test_bouncing_ball_3d.py  test_bouncing_ball_3d_fmu.py  test_bouncing_ball_xz.py  test_caus_var_ini.py  test_change_setter.py  test_class_params.py  test_controls.py  test_enums.py  test_init.py  test_interpolation.py  test_make_bouncingBall.py  test_make_oscillator_fmu.py  test_make_simpletable.py  test_make_time_table.py  test_model.py  test_model_v0.py  test_new_pythonfmu_features.py  test_oscillator.py  test_oscillator_6dof_fmu.py  test_oscillator_fmu.py  test_oscillator_xd.py  test_pint.py  test_pint_v0.py  test_range.py  test_solver.py  test_structured_variables.py  test_time_table.py  test_time_table_fmu.py  test_transform.py  (+7 more)
tests/examples/: bouncing_ball_3d.py  bouncing_ball_3d_pythonfmu.py  bouncing_ball_xz.py  input_table.py  new_pythonfmu_features.py  new_pythonfmu_features2.py  new_pythonfmu_features3.py  new_pythonfmu_features4.py  oscillator.py  simple_table.py
tests/models/: BouncingBall.py  SimpleTable.py
tests/resources/: SimpleTableSystemStructure.xml  simple_table.py
tests/test_working_directory/: .gitignore  BouncingBall3D.fmu  BouncingBallXZ.fmu  OspSystemStructure.xml  SimpleTable.fmu  systemModel.xml
(+36 files in other folders)
