[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/component_model",
    "tests",
    "tests/examples",
    ".coveragerc",
    ".editorconfig",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/component_model",
    "examples",
]

[project]
name = "component-model"
version = "0.2.0"
description = "Constructs a Functional Mockup Interface component model from a python script (fulfilling some requirements)."
readme = "README.rst"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Siegfried Eisinger", email = "Siegfried.Eisinger@dnv.com" },
]
keywords = [
    "simulation",
    "model",
    "FMI",
    "OSP",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26,<2.0",
    "matplotlib>=3.9.1",
    "pint>=0.24",
    "sympy>=1.13.3",
    "jsonpath-ng>=1.7.0",
    "libcosimpy>=0.0.2",
    "pythonfmu>=0.6.7",
    "flexparser<0.4",
    "pdfminer>=20191125",
    "pypdf2>=3.0.1",
    "scipy>=1.15.1",
]

[project.optional-dependencies]
modelTest = [
    "fmpy==0.3.21", # version 0.3.22 does so far (25.3.25) not workwhen installing through pip
    "matplotlib>=3.9.1",
]
rest = [
    "docutils>=0.21",
]
editor = [
    "thonny>=4.1",
]

[project.urls]
Homepage = "https://github.com/dnv-opensource/component-model"
Documentation = "https://dnv-opensource.github.io/component-model/README.html"
Repository = "https://github.com/dnv-opensource/component-model.git"
Issues = "https://github.com/dnv-opensource/component-model/issues"
Changelog = "https://github.com/dnv-opensource/component-model/blob/main/CHANGELOG.md"


[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6.3",
    "pyright>=1.1.378",
    "mypy>=1.11.1",
    "sourcery>=1.22",
    "pre-commit>=3.8",
    "Sphinx>=8.0",
    "sphinx-argparse-cli>=1.17",
    "sphinx-autodoc-typehints>=2.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
]
native-tls = true


[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    # "tests",
    # "demos",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]

[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "examples",
]
exclude = [
    "tests/test_working_directory",
    "examples/new_pythonfmu_features*",
]
