[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/component_model",
    "tests",
    "examples",
    ".coveragerc",
    ".editorconfig",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/component_model",
    "examples",
]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "component-model"
version = "0.3.0"
description = "Constructs a Functional Mockup Interface component model from a python script (fulfilling some requirements)."
readme = "README.rst"
requires-python = ">= 3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Siegfried Eisinger", email = "Siegfried.Eisinger@dnv.com" },
]
keywords = [
    "simulation",
    "model",
    "FMI",
    "OSP",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.3",
    "pint>=0.24.4",
    "jsonpath-ng>=1.7.0",
    "pythonfmu>=0.7.0",
    "flexparser>=0.4",
    "scipy-stubs>=1.17.0.0",
]

[project.optional-dependencies]
    tests = [
        "fmpy==0.3.21", # version 0.3.22 does so far (25.3.25) not workwhen installing through pip
        "scipy>=1.16",
        "matplotlib>=3.10",
        "plotly>=6.3",
#        "libcosimpy>=0.0.5",
#        "libcosimpy @ file:///C:/Users/eis/Downloads/libcosimpy-0.0.4-cp312-cp312-win_amd64.whl",
    ]
    rest = ["docutils>=0.21"]
    editor = []

[project.urls]
Homepage = "https://github.com/dnv-opensource/component-model"
Documentation = "https://dnv-opensource.github.io/component-model/README.html"
Repository = "https://github.com/dnv-opensource/component-model.git"
Issues = "https://github.com/dnv-opensource/component-model/issues"
Changelog = "https://github.com/dnv-opensource/component-model/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "ruff>=0.14.3",
    "pyright>=1.1.407",
    "mypy>=1.11.1",
    "sourcery>=1.40",
    "pre-commit>=4.3",
    "Sphinx>=8.2",
    "sphinx-argparse-cli>=1.20",
    "sphinx-autodoc-typehints>=3.5",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2025.9",
]

[tool.uv]
default-groups = [
    "dev",
]
native-tls = true
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
    # "sys_platform == 'darwin'",
]

[tool.mypy]
plugins = []
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "examples",
]
exclude = [
    "tests/test_working_directory",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "examples",
]
exclude = [
    "tests/test_working_directory",
]
